# VulkanoVista

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VulkanoVista.sln  VulkanoVista.vcxproj  VulkanoVista.vcxproj.filters
shaders/: compile_shaders.bat  second_pass.frag  second_pass.vert  shader.frag  shader.vert
src/: CMakeLists.txt  Device.cpp  Device.h  Engine.cpp  Engine.h  ImGuiManager.cpp  ImGuiManager.h  Instance.cpp  Instance.h  Logger.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  SyncObjects.cpp  SyncObjects.h  Texture.h  Utils.cpp  Utils.h  Vertex.h  Window.cpp  Window.h  main.cpp
